# J.orchestration

./: .env  .gitignore  README.md  main.py  pyproject.toml  test.py
globals/: globals.py
module/: Manager.py  dataPrep.py
oprations/: apiOps.py  config.py  notifier.py  utils.py
resource/: apiDef.json
